--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,15 +1,20 @@
 .header-nav {
   background-color: var(--primary-color);
   color: var(--primary-contrast-color);
-  height: 120px;
+  height: var(--header-nav-height);
   padding-inline: 1.5em;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  width: 100dvw;
+  padding-block-start: 1em;
+  font-size: 1.2em;
 }
 
 .header-nav__brand {
   font-family: Bungee, "Arial Black", Arial, sans-serif;
+  font-size: 1.5em;
 }
 
 .header-nav__sub {
