write simple style for main, add text content to eval

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -36,6 +36,11 @@ body {
   font-weight: 350;
 }
 
+main {
+  width: 90%;
+  margin-inline: auto;
+}
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
