--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,13 +23,18 @@ html {
   --highlight-color: #D69925;
 
   --primary-font-color: #545149;
+  --primary-dark-color: color-mix(in srgb, black 30%, var(--primary-font-color));
+  --primary-light-color: color-mix(in srgb, white 50%, var(--primary-font-color));
+
+
   --primary-background-color: #f4f1ec;
 
-  --form-font-color: darken(var(--primary-font-color), 65%);
   --error: #9d1a3d;
 
   --header-nav-height: 120px;
   --header-height: 400px;
+
+  --border-width: 4px;
 }
 
 body {
@@ -43,7 +48,7 @@ body {
 }
 
 main {
-  width: 90%;
+  inline-size: 90%;
   margin-inline: auto;
   background-color: inherit;
 }
@@ -59,6 +64,14 @@ main {
 
 .error {
   color: var(--error)
+}
+
+.count {
+  font-size: 0.3em;
+  vertical-align: text-top;
+  position: relative;
+  left: -0.5em;
+  top: 0.75em;
 }
 
 
