--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -3,6 +3,7 @@
     border: var(--border-width) solid;
     border-color: var(--primary-dark-color);
     padding: 0.75em;
+    margin-block: 1.25em;
 
     --shadow-distance: calc(var(--border-width) *1.5);
 
@@ -36,7 +37,9 @@
     align-items: inherit;
 
     img {
-      max-block-size: 2.75em;
+      max-block-size: 64px;
+      aspect-ratio: 1/1;
+      margin-inline-end: 0.25em;
     }
   }
 
