--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -29,8 +29,9 @@ html {
 
   --primary-background-color: #f4f1ec;
 
-  --error: #9d1a3d;
 
+
+  --shadow-distance: calc(var(--border-width) *1.5);
   --header-nav-height: 120px;
   --header-height: 400px;
 
@@ -45,6 +46,7 @@ body {
   font-family: "Source Sans 3", sans-serif;
   /* font-family: Bungee; */
   font-weight: 350;
+  position: relative;
 }
 
 main {
