add toggle new tweet chrome

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -10,6 +10,23 @@
 }
 
 
+.header-nav__sub {
+
+  cursor: pointer;
+
+  .header-nav__down {
+    transition: ease-out 300ms;
+  }
+
+  &:hover {
+    text-shadow: 0 0 4px var(--highlight-color);
+
+    .header-nav__down {
+      transform: translateY(0.2em)
+    }
+  }
+}
+
 
 
 .header__avatar {
