add fixed position scroll top/enable new tweet css and js

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -15,7 +15,7 @@
   cursor: pointer;
 
   .header-nav__down {
-    transition: ease-out 300ms;
+    transition: ease-out var(--transition-duration);
   }
 
   &:hover {
