--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,4 +1,11 @@
 .tweet-container {
+
+
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 0.75em;
+
   .tweet {
     border: var(--border-width) solid;
     border-color: var(--primary-dark-color);
