--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -3,7 +3,7 @@
 
   display: grid;
   align-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  /* grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); */
   gap: 0.75em;
 
   .tweet {
