--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -33,11 +33,19 @@ html {
   --transition-duration: 300ms;
 
   --shadow-distance: calc(var(--border-width) *1.5);
-  --header-nav-height: 120px;
+  --header-nav-height: 70px;
   --header-height: 400px;
 
   --border-width: 4px;
 }
+
+@media only screen and (width >=1024px) {
+  :root {
+    --header-nav-height: 120px;
+
+  }
+}
+
 
 body {
   color: var(--primary-font-color);
@@ -59,6 +67,7 @@ main {
 @media only screen and (width >=1024px) {
   main {
     inline-size: 90%;
+
   }
 }
 
