add multi-columns for wide screens, fiddle with avatar size for mobile

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,7 +7,7 @@
 
   .header__avatar {
     padding: 2px;
-    block-size: calc(var(--header-height) - 15em);
+    block-size: calc((var(--header-height) - 16em) - (-10vw));
   }
 
   .header__name {
