--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,7 +24,7 @@ html {
 
   --primary-font-color: #545149;
   --primary-dark-color: color-mix(in srgb, black 30%, var(--primary-font-color));
-  --primary-light-color: color-mix(in srgb, white 50%, var(--primary-font-color));
+  --primary-light-color: color-mix(in srgb, rgba(255, 255, 255, 0.6) 60%, var(--primary-font-color));
 
 
   --primary-background-color: #f4f1ec;
@@ -51,11 +51,8 @@ body {
   color: var(--primary-font-color);
   background-color: var(--primary-background-color);
   font-size: 24px;
-
   font-family: "Source Sans 3", sans-serif;
-  /* font-family: Bungee; */
   font-weight: 350;
-  position: relative;
 }
 
 main {
